--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <nav class="classy-navbar justify-content-between" id="oneMusicNav">
 
                         <!-- Nav brand -->
-                        <a href="index.php" class="nav-brand" style="color: white;">RicPaolini<span style='font-size:100%;'>&#9734;</span> </a>
+                        <a href="index.html" class="nav-brand" style="color: white;">RicPaolini<span style='font-size:100%;'>&#9734;</span> </a>
 
                         <!-- Navbar Toggler -->
                         <div class="classy-navbar-toggler">
