--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 <div class="col-12">
                     <!-- Contact Form Area -->
                     <div class="contact-form-area">
-                        <form  action="php/enviarcorreo.php" method="post" >
+                        <form  action="mailto:mvrm10@gmail.com?" method="post" >
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group wow fadeInUp" data-wow-delay="100ms">
