--- a/index.html
+++ b/index.html
@@ -237,19 +237,13 @@
                 <div class="col-12">
                     <!-- Contact Form Area -->
                     <div class="contact-form-area">
-                        <form  action="mailto:mvrm10@gmail.com?subject=MessageFromWebsite" method="post" enctype="text/plain" id="mailtolink" target="_blank" >
+                        <form  action="mailto:mvrm10@gmail.com?subject=Mensaje-Ricardo" method="post" enctype="text/plain"  target="_top" >
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group wow fadeInUp" data-wow-delay="100ms">
                                         <input type="text" name="name" class="form-control" id="name" placeholder="Nombre">
                                     </div>
                                 </div>
-                                <div class="col-md-12">
-                                    <div class="form-group wow fadeInUp" data-wow-delay="200ms">
-                                        <input type="email" name="email" class="form-control" id="email" placeholder="Correo">
-                                    </div>
-                                </div>
-
                                 <div class="col-12">
                                     <div class="form-group wow fadeInUp" data-wow-delay="400ms">
                                         <textarea type="text" name="message" class="form-control" id="message" cols="30" rows="10" placeholder="Mensaje"></textarea>
@@ -260,8 +254,6 @@
                                 </div>
                             </div>
                         </form>
-                        <a href="mailto:?Subject=MessageFromWebsite" title="Share via email" rel="nofollow" target="_top">Email</a>
-
                     </div>
                 </div>
             </div>
@@ -298,22 +290,7 @@
 
     <!-- ##### All Javascript Script ##### -->
 
-    <script type="text/javascript">
-            window.addEventListener("load", function() {
-            document.getElementById("mailtolink").addEventListener("click", function(e) {
-            e.preventDefault() // remove after testing
-            let url = new URL(this.href);
-            const name = document.querySelector("[name=name]").value.trim();
-            const email = document.querySelector("[name=email]").value.trim();
-            const message = document.querySelector("[name=message]").value.trim();
-            url.searchParams.set("from", email);
-            url.searchParams.set("subject", "Message from " + (document.title || location.hostname))
-            url.searchParams.set("body", name + " said " + message)
-            this.href=url;
-            console.log(url)
-          })
-          });
-    </script>
+
     <script src="js/carousel.js"></script>
 
     <!-- jQuery-2.2.4 js -->
