--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 <div class="col-12">
                     <!-- Contact Form Area -->
                     <div class="contact-form-area">
-                        <form  action="mailto:mvrm10@gmail.com?subject=MessageFromWebsite" method="post" enctype="text/plain"  target="_top" >
+                        <form  action="mailto:mvrm10@gmail.com?subject=MessageFromWebsite" title="Share via email" rel="nofollow" target="_top">
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group wow fadeInUp" data-wow-delay="100ms">
